loopfor.LoopStairs.scala.code
var finished : Boolean = false
forward(3)
while (finsihed!= true) {
  if (isFacingWalls()){
    left()
    forward()
    right()
    foward()
  }
  else {
    forward(3)
    finished=true
  }
}